# pybind11-test

./: .gitignore  CMakeLists.txt  README.md  make.py  requirements.txt
.github/workflows/: python.yml
modules/: common.py  config.py  deps.py  functions.py
src/cpp/: main.cpp
src/python/: example.py  functions.py
